Bring kyverno back

--- a/clusters/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/local.home/argocd/bootstrap/values.yaml
@@ -123,41 +123,41 @@ applications:
         factor: 2
         maxDuration: 3m
 
-  # kyverno:
-  #   annotations:
-  #     argocd.argoproj.io/compare-options: IgnoreExtraneous
-  #     argocd.argoproj.io/sync-wave: '21'
-  #   destination:
-  #     namespace: kyverno
-  #   source:
-  #     path: components/apps/kyverno/overlays/policies
-  #   syncPolicyRetry:
-  #     limit: 5
-  #     backoff:
-  #       duration: 5s
-  #       factor: 2
-  #       maxDuration: 3m
-  #   syncOptions:
-  #     - Replace=true
-  #   extraFields: |
-  #     ignoreDifferences:
-  #       - group: kyverno.io
-  #         kind: ClusterPolicy
-  #         jsonPointers:
-  #         - /spec/rules
-  #       - group: kyverno.io
-  #         kind: Policy
-  #         jsonPointers:
-  #         - /spec/rules
+  kyverno:
+    annotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
+      argocd.argoproj.io/sync-wave: '21'
+    destination:
+      namespace: kyverno
+    source:
+      path: components/apps/kyverno/overlays/policies
+    syncPolicyRetry:
+      limit: 5
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
+    syncOptions:
+      - Replace=true
+    extraFields: |
+      ignoreDifferences:
+        - group: kyverno.io
+          kind: ClusterPolicy
+          jsonPointers:
+          - /spec/rules
+        - group: kyverno.io
+          kind: Policy
+          jsonPointers:
+          - /spec/rules
 
-  # kyverno-acm:
-  #   annotations:
-  #     argocd.argoproj.io/compare-options: IgnoreExtraneous
-  #     argocd.argoproj.io/sync-wave: '21'
-  #   destination:
-  #     namespace: acm-policies
-  #   source:
-  #     path: components/apps/kyverno-acm/base
+  kyverno-acm:
+    annotations:
+      argocd.argoproj.io/compare-options: IgnoreExtraneous
+      argocd.argoproj.io/sync-wave: '21'
+    destination:
+      namespace: acm-policies
+    source:
+      path: components/apps/kyverno-acm/base
 
   web-terminal:
     project: cluster-config
