Track by revision

--- a/clusters/default/argocd/bootstrap/values.yaml
+++ b/clusters/default/argocd/bootstrap/values.yaml
@@ -9,7 +9,7 @@ default:
       server: https://kubernetes.default.svc
     source:
       repoURL: https://github.com/gnunn-gitops/cluster-config.git
-      targetRevision: HEAD
+      targetRevision: a6d8637
 
 projects:
 
@@ -51,6 +51,7 @@ applications:
     source:
       path: compliance-operator/aggregate/scheduled
       repoURL: https://github.com/redhat-cop/gitops-catalog
+      targetRevision: HEAD
 
   container-security:
     annotations:
@@ -60,7 +61,8 @@ applications:
       namespace: openshift-operators
     source:
       path: container-security-operator/overlays/stable-3.7
-      repoURL: https://github.com/gnunn1/gitops-catalog
+      repoURL: https://github.com/redhat-cop/gitops-catalog
+      targetRevision: HEAD
 
   dev-tools:
     annotations:
