--- a/clusters/aws.cluster/argocd/bootstrap/values.yaml
+++ b/clusters/aws.cluster/argocd/bootstrap/values.yaml
@@ -9,7 +9,7 @@ default:
       server: https://kubernetes.default.svc
     source:
       repoURL: https://github.com/gnunn-gitops/cluster-config.git
-      targetRevision: HEAD
+      targetRevision: a6d8637
 
 applications:
 
