--- a/clusters/aws.cluster/apps/banner/base/banner.yaml
+++ b/clusters/aws.cluster/apps/banner/base/banner.yaml
@@ -3,7 +3,7 @@ kind: ConsoleNotification
 metadata:
   name: home-banner
 spec:
-  text: "Cluster: aws.cluster - GitOps is awesome"
+  text: "Cluster: aws.cluster"
   location: BannerTop
   color: '#fff'
   backgroundColor: '#0088ce'
