--- a/clusters/local.home/apps/banner/base/home-banner.yaml
+++ b/clusters/local.home/apps/banner/base/home-banner.yaml
@@ -3,7 +3,7 @@ kind: ConsoleNotification
 metadata:
   name: home-banner
 spec:
-  text: "Cluster: local.home - testing"
+  text: "Cluster: local.home"
   location: BannerTop
   color: '#fff'
   backgroundColor: '#0088ce'
