--- a/components/apps/certificates/base/apiserver.yaml
+++ b/components/apps/certificates/base/apiserver.yaml
@@ -9,6 +9,6 @@ spec:
   servingCerts:
     namedCertificates:
     - names:
-      - api.home.ocplab.com
+      - dummy
       servingCertificate:
         name: openshift-api-certificate
