--- a/components/apps/certificates/base/kustomization.yaml
+++ b/components/apps/certificates/base/kustomization.yaml
@@ -1,5 +1,5 @@
 resources:
 - openshift-api-certificate.yaml
 - openshift-wildcard-certificate.yaml
-- patch-cluster-api-cert-job.yaml
-- patch-cluster-wildcard-cert-job.yaml
+- apiserver.yaml
+- ingresscontroller.yaml
