--- a/components/apps/kyverno/base/kustomization.yaml
+++ b/components/apps/kyverno/base/kustomization.yaml
@@ -34,6 +34,9 @@ patches:
     - op: replace
       path: /data/resourceFilters
       value: '[Event,*,*][*,kube-system,*][*,kube-public,*][*,kube-node-lease,*][Node,*,*][APIService,*,*][TokenReview,*,*][SubjectAccessReview,*,*][SelfSubjectAccessReview,*,*][*,kyverno,kyverno*][*,openshift,*][*,sealed-secrets,*][*,openshift-*,*][*,open-cluster-*,*][*,hive,*][*,stackrox,*][*,rhacs-operator,*][*,costmanagement-metrics-operator,*][Binding,*,*][ReplicaSet,*,*][ReportChangeRequest,*,*][ClusterReportChangeRequest,*,*][PolicyReport,*,*][ClusterPolicyReport,*,*]'
+    - op: replace
+      path: /data/webhooks
+      value: '[{"namespaceSelector": {"matchExpressions": [{"key":"kubernetes.io/metadata.name","operator":"NotIn","values":["kyverno,kube-public,kube-system,kube-node-lease,openshift,openshift-apiserver,openshift-kube-apiserver"]}]}}]'
   target:
     kind: ConfigMap
     name: kyverno
