Use opt-in label for kyverno webhook

--- a/tenants/product-catalog/namespaces/overlays/gitops/gitops-namespace.yaml
+++ b/tenants/product-catalog/namespaces/overlays/gitops/gitops-namespace.yaml
@@ -6,4 +6,5 @@ metadata:
     openshift.io/display-name:  Product Catalog GitOps
   labels:
     tenant: product-catalog
+    kyverno: enabled
   name: product-catalog-gitops
