--- a/tenants/product-catalog/namespaces/overlays/dev/dev-namespace.yaml
+++ b/tenants/product-catalog/namespaces/overlays/dev/dev-namespace.yaml
@@ -8,5 +8,6 @@ metadata:
     app.openshift.io/vcs-ref: main
   labels:
     argocd.argoproj.io/managed-by: product-catalog-gitops
+    kyverno: enabled
     tenant: product-catalog
   name: product-catalog-dev
