--- a/tenants/product-catalog/namespaces/overlays/monitor/monitor-namespace.yaml
+++ b/tenants/product-catalog/namespaces/overlays/monitor/monitor-namespace.yaml
@@ -7,4 +7,5 @@ metadata:
   labels:
     argocd.argoproj.io/managed-by: product-catalog-gitops
     tenant: product-catalog
+    kyverno: enabled
   name: product-catalog-monitor
