--- a/tenants/product-catalog/namespaces/overlays/prod/prod-namespace.yaml
+++ b/tenants/product-catalog/namespaces/overlays/prod/prod-namespace.yaml
@@ -9,4 +9,5 @@ metadata:
   labels:
     argocd.argoproj.io/managed-by: product-catalog-gitops
     tenant: product-catalog
+    kyverno: enabled
   name: product-catalog-prod
