--- a/tenants/demo/namespaces/base/kustomization.yaml
+++ b/tenants/demo/namespaces/base/kustomization.yaml
@@ -2,7 +2,7 @@ kind: Kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 
 resources:
-- ../../../../components/apps/tenant-namespace/overlays/gitops
+- ../../../defaults/namespaces/base
 - ../../../defaults/networkpolicy/base
 - demo-admins-rolebinding.yaml
 - demo-users-rolebinding.yaml
