--- a/tenants/product-catalog/namespaces/base/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/base/kustomization.yaml
@@ -2,7 +2,7 @@ kind: Kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 
 resources:
-- ../../../../components/apps/tenant-namespace/overlays/gitops
 - ../../../defaults/networkpolicy/base
+- ../../../defaults/namespaces/base
 - product-catalog-admins-rolebinding.yaml
 - product-catalog-users-rolebinding.yaml
