--- a/tenants/product-catalog/namespaces/overlays/gitops/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/gitops/kustomization.yaml
@@ -5,13 +5,13 @@ namespace: product-catalog-gitops
 
 resources:
 - ../../base
-- ../../../../../components/apps/gitops-operator/base
-- gitops-namespace.yaml
-- operatorgroup.yaml
-- product-catalog-project.yaml
-- console-link.yaml
-- in-cluster-secret.yaml
-- argocd-notifications-cm.yaml
+# - ../../../../../components/apps/gitops-operator/base
+# - gitops-namespace.yaml
+# - operatorgroup.yaml
+# - product-catalog-project.yaml
+# - console-link.yaml
+# - in-cluster-secret.yaml
+# - argocd-notifications-cm.yaml
 
 patches:
 # Patch create-local-pipeline account job environment variables
