Add product-catalog project to shared instance

--- a/tenants/gitops/overlays/shared/kustomization.yaml
+++ b/tenants/gitops/overlays/shared/kustomization.yaml
@@ -3,3 +3,5 @@ namespace: gitops
 resources:
 - namespace.yaml
 - ../../../../components/apps/gitops-operator/base
+# Tenant projects here
+- product-catalog-appproject.yaml
