Add Shared GitOps instance console-link

--- a/tenants/gitops/overlays/shared/kustomization.yaml
+++ b/tenants/gitops/overlays/shared/kustomization.yaml
@@ -3,5 +3,6 @@ namespace: gitops
 resources:
 - namespace.yaml
 - ../../../../components/apps/gitops-operator/base
+- console-link.yaml
 # Tenant projects here
 - product-catalog-appproject.yaml
