Fix extraConfig patch

--- a/tenants/gitops/overlays/shared/kustomization.yaml
+++ b/tenants/gitops/overlays/shared/kustomization.yaml
@@ -23,7 +23,7 @@ patches:
      name: argocd
    patch: |-
     - op: add
-      path: /spec/extraconfig
+      path: /spec/extraConfig
       value:
         accounts.product-catalog-pipeline: apiKey
     - op: add
