--- a/tenants/gitops/overlays/shared/kustomization.yaml
+++ b/tenants/gitops/overlays/shared/kustomization.yaml
@@ -15,6 +15,8 @@ patches:
       value:
         - name: ACCOUNTS_NAMESPACES
           value: "product-catalog-pipeline=product-catalog-cicd"
+        - name: ARGO_SERVER_HOST
+          value: "argocd-server-gitops.apps.home.ocplab.com"
   target:
     kind: Job
     name: create-pipeline-local-user
