--- a/components/apps/gitops-operator/base/create-pipeline-local-user-job.yaml
+++ b/components/apps/gitops-operator/base/create-pipeline-local-user-job.yaml
@@ -16,6 +16,16 @@ spec:
           - |
             export HOME=/home/argocd
 
+            echo "Getting argocd admin credential..."
+            if kubectl get secret argocd-cluster >/dev/null;
+            then
+              # Retrieve password
+              PASSWORD=$(oc get secret argocd-cluster -o jsonpath="{.data.admin\.password}" | base64 -d)
+            else
+              echo "Could not retrieve admin password"
+              exit 1
+            fi
+
             IFS=' '
             read -ra LIST <<< "$ACCOUNTS_NAMESPACES"
             for i in "${LIST[@]}"; do   # access each element of array
