Switch to plaintext due to change in TLS

--- a/components/apps/gitops-operator/base/create-pipeline-local-user-job.yaml
+++ b/components/apps/gitops-operator/base/create-pipeline-local-user-job.yaml
@@ -36,7 +36,7 @@ spec:
                 if [ -z "$HAS_SECRET" ];
                 then
                   echo "No argo-env-secret present, creating"
-                  argocd login --insecure --username admin --password ${PASSWORD} argocd-server
+                  argocd login --plaintext --username admin --password ${PASSWORD} argocd-server
                   echo "Generating token for ${account}"
                   TOKEN=$(argocd account generate-token --account ${account})
                   if [ "$TOKEN" ];
