--- a/tenants/product-catalog/namespaces/overlays/gitops/gitops-namespace.yaml
+++ b/tenants/product-catalog/namespaces/overlays/gitops/gitops-namespace.yaml
@@ -5,6 +5,7 @@ metadata:
     openshift.io/description: Project for gitops tool for product catalog team
     openshift.io/display-name:  Product Catalog GitOps
   labels:
+    argocd.argoproj.io/managed-by: gitops
     tenant: product-catalog
     kyverno: enabled
   name: product-catalog-gitops
