--- a/tenants/product-catalog/namespaces/overlays/monitor/monitor-namespace.yaml
+++ b/tenants/product-catalog/namespaces/overlays/monitor/monitor-namespace.yaml
@@ -5,7 +5,7 @@ metadata:
     openshift.io/description: Project for monitoring tools of product catalog application
     openshift.io/display-name:  Product Catalog Monitor
   labels:
-    # argocd.argoproj.io/managed-by: product-catalog-gitops
+    argocd.argoproj.io/managed-by: gitops
     tenant: product-catalog
     kyverno: enabled
   name: product-catalog-monitor
