--- a/tenants/product-catalog/namespaces/overlays/test/test-namespace.yaml
+++ b/tenants/product-catalog/namespaces/overlays/test/test-namespace.yaml
@@ -7,7 +7,7 @@ metadata:
     app.openshift.io/vcs-uri: https://github.com/gnunn-gitops/product-catalog
     app.openshift.io/vcs-ref: main
   labels:
-    argocd.argoproj.io/managed-by: product-catalog-gitops
+    argocd.argoproj.io/managed-by: gitops
     tenant: product-catalog
     kyverno: enabled
   name: product-catalog-test
