Update RBAC for shared instance

--- a/tenants/gitops/overlays/shared/kustomization.yaml
+++ b/tenants/gitops/overlays/shared/kustomization.yaml
@@ -35,11 +35,15 @@ patches:
     - op: add
       path: /spec/rbac
       value:
-        defaultPolicy: role:readonly
+        defaultPolicy: role: ''
         policy: |
           p, role: product-catalog-pipeline, applications, get, apps-product-catalog/*, allow
           p, role: product-catalog-pipeline, applications, sync, apps-product-catalog/*, allow
-          g, product-catalog-admins, role:admin
+          p, role: product-catalog-admin, applications, *, apps-product-catalog/*, allow
+          p, role: product-catalog-user, applications, get, apps-product-catalog/*, allow
+          p, role: product-catalog-user, applications, sync, apps-product-catalog/*, allow
+          g, product-catalog-admins, role:product-catalog-admin
+          g, product-catalog-users, role:product-catalog-user
           g, system:cluster-admins, role:admin
           g, product-catalog-pipeline, role: product-catalog-pipeline
         scopes: "[accounts,groups]"
