--- a/tenants/gitops/overlays/shared/kustomization.yaml
+++ b/tenants/gitops/overlays/shared/kustomization.yaml
@@ -36,15 +36,18 @@ patches:
       path: /spec/rbac
       value:
         policy: |
+          p, role: product-catalog-admin, clusters, get, *, allow
+          p, role: product-catalog-user, clusters, get, *, allow
           p, role: product-catalog-pipeline, applications, get, apps-product-catalog/*, allow
           p, role: product-catalog-pipeline, applications, sync, apps-product-catalog/*, allow
           p, role: product-catalog-admin, projects, get, apps-product-catalog, allow
           p, role: product-catalog-admin, applications, *, apps-product-catalog/*, allow
+          p, role: product-catalog-user, projects, get, apps-product-catalog, allow
           p, role: product-catalog-user, applications, get, apps-product-catalog/*, allow
           p, role: product-catalog-user, applications, sync, apps-product-catalog/*, allow
-          p, role: product-catalog-user, projects, get, apps-product-catalog, allow
           g, product-catalog-admins, role:product-catalog-admin
           g, product-catalog-users, role:product-catalog-user
           g, system:cluster-admins, role:admin
+          g, cluster-admins, role:admin
           g, product-catalog-pipeline, role: product-catalog-pipeline
         scopes: "[accounts,groups]"
