Use config plugin for envrionment variables

--- a/clusters/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/local.home/argocd/bootstrap/values.yaml
@@ -35,6 +35,9 @@ applications:
       argocd.argoproj.io/sync-wave: '11'
     source:
       path: clusters/local.home/apps/banner/base
+      extraSourceFields: |
+        plugin:
+          name: kustomize-envvar
 
   console-links:
     annotations:
