--- a/tenants/product-catalog/namespaces/overlays/gitops-shared/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/overlays/gitops-shared/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 namespace: product-catalog-gitops
 
 resources:
-- ../../gitops
+- ../../base
 - gitops-namespace.yaml
 
 patches:
