--- a/tenants/product-catalog/namespaces/base/kustomization.yaml
+++ b/tenants/product-catalog/namespaces/base/kustomization.yaml
@@ -6,3 +6,13 @@ resources:
 - ../../../defaults/namespaces/overlays/gitops
 - product-catalog-admins-rolebinding.yaml
 - product-catalog-users-rolebinding.yaml
+
+patches:
+# Patch in namespace for Argo CD that is managing this namespace
+- patch: |-
+    - op: replace
+      path: /subjects/0/namespace
+      value: gitops
+  target:
+    kind: RoleBinding
+    name: gitops-argocd-extended-rolebinding
