--- a/components/apps/kyverno/base/kustomization.yaml
+++ b/components/apps/kyverno/base/kustomization.yaml
@@ -27,6 +27,9 @@ patches:
     - op: replace
       path: /spec/template/spec/initContainers/0/resources/limits/cpu
       value: 250m
+    - op: replace
+      path: /spec/template/spec/containers/0/resources/requests/cpu
+      value: 500m
   target:
     kind: Deployment
     name: kyverno
