--- a/tenants/gitops/overlays/shared/kustomization.yaml
+++ b/tenants/gitops/overlays/shared/kustomization.yaml
@@ -37,6 +37,7 @@ patches:
       path: /spec/rbac
       value:
         policy: |
+          p, role:product-catalog-pipeline, projects, get, apps-product-catalog, allow
           p, role:product-catalog-pipeline, applications, get, apps-product-catalog/*, allow
           p, role:product-catalog-pipeline, applications, sync, apps-product-catalog/*, allow
           p, role:product-catalog-admin, clusters, get, *, allow
