--- a/tenants/gitops/overlays/shared/product-catalog-appproject.yaml
+++ b/tenants/gitops/overlays/shared/product-catalog-appproject.yaml
@@ -2,17 +2,10 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: apps-product-catalog
+  labels:
+    argocd.argoproj.io/project-inherit: global
 spec:
-  clusterResourceBlacklist:
-  - group: '*'
-    kind: '*'
-  namespaceResourceBlacklist:
-  - group: ''
-    kind: Namespace
-  - group: ''
-    kind: ResourceQuota
-  - group: ''
-    kind: LimitRange
+  description: Product Catalog Team Project
   destinations:
   - namespace: 'product-catalog-dev'
     server: 'https://kubernetes.default.svc'
@@ -26,11 +19,6 @@ spec:
     server: 'https://kubernetes.default.svc'
   - namespace: 'product-catalog-gitops'
     server: 'https://kubernetes.default.svc'
-  roles:
-  - name: users
-    policies:
-    - p, role:user, applications, *, *, allow
-    - p, role:user, projects, get, *, allow
   sourceRepos:
   - '*'
   sourceNamespaces:
