--- a/tenants/gitops/overlays/shared/kustomization.yaml
+++ b/tenants/gitops/overlays/shared/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
 - namespace.yaml
 - ../../../../components/apps/gitops-operator/base
 - console-link.yaml
-- global-approject.yaml
+- global-appproject.yaml
 # Tenant projects here
 - product-catalog-appproject.yaml
 
