--- a/components/configs/groups-and-membership/base/kustomization.yaml
+++ b/components/configs/groups-and-membership/base/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- cluster-admins-group.yaml
 - argocdadmins-group-base.yaml
 - argocdusers-group-base.yaml
 - cluster-admin-users-rolebinding.yaml
-- gitops-manager-role.yaml
 # - developer-group-base.yaml
