--- a/clusters/local.home/apps/banner/base/home-banner.yaml
+++ b/clusters/local.home/apps/banner/base/home-banner.yaml
@@ -3,7 +3,10 @@ kind: ConsoleNotification
 metadata:
   name: home-banner
 spec:
-  text: "Cluster: local.home (<a href='https://console.redhat.com/openshift/details/${CLUSTER_ID}'>${CLUSTER_ID}</a>)"
+  text: "Cluster: local.home (${CLUSTER_ID})"
   location: BannerTop
   color: '#fff'
   backgroundColor: '#0088ce'
+  link:
+    href: https://console.redhat.com/openshift/details/${CLUSTER_ID}
+    text: "Cluster: local.home (${CLUSTER_ID})"
