Standardize banner using environment variables and plugin

--- a/clusters/aws.cluster/argocd/bootstrap/values.yaml
+++ b/clusters/aws.cluster/argocd/bootstrap/values.yaml
@@ -27,7 +27,10 @@ applications:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
       argocd.argoproj.io/sync-wave: '11'
     source:
-      path: clusters/aws.cluster/apps/banner/base
+      path: components/configs/banner/base
+      extraSourceFields: |
+        plugin:
+          name: kustomize-envvar
 
   cert-manager-operator:
     annotations:
