--- a/clusters/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/local.home/argocd/bootstrap/values.yaml
@@ -34,7 +34,7 @@ applications:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
       argocd.argoproj.io/sync-wave: '11'
     source:
-      path: clusters/local.home/apps/banner/base
+      path: components/configs/banner/base
       extraSourceFields: |
         plugin:
           name: kustomize-envvar
